# os_lab3

./: CMakeLists.txt  README.md
include/: os.h  prime.h  shared_data.h
src/: child.cpp  linux_os.cpp  parent.cpp  prime.cpp
